<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">千里传音</string>
    <string name="my">我</string>
    <string name="talk">语音</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_yuyin">千里传音</string>
    <string name="image_center_desc">大家都在玩，一起来群聊吧</string>
    <string name="title_activity_user_info">千里传音</string>
    <string name="addgroup_layout_desc">增加一个小组</string>
    <string name="title_activity_call">千里传音</string>
    <string name="refuse_call">拒绝本次通话请求</string>
    <string name="promise_call">同意本次通话请求</string>
    <string name="stop_call">停止本次通话</string>
    <string name="title_activity_talk">千里传音</string>
    <string name="user_name_label">用户名：</string>
    <string name="user_level_label">用户级别：</string>
    <string name="user_level_nomoral">普通用户</string>
    
    <!-- <string name="server_ip">112.124.37.249</string> -->
    <!-- <string name="server_ip">192.168.1.111</string>-->

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_login">千里传音</string>
    <string name="login_text">登陆</string>
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="title_activity_first">千里传音</string>

</resources>